# fastapi-athena-tutorial

./: .env.template  .gitignore  README.md  pyproject.toml
scripts/: clean-aws.sh  config.txt  setup-aws.sh
src/: awsmanager.py  main.py
src/routes/movies/: movies.py
src/sql/: get_movie.sql  get_movies_by_genre.sql  get_top_10_movies_rotten.sql
src/sql/movies/: avg_profitability_by_genres.sql  get_top_10_movies_rotten.sql  studios_with_highest_profits.sql
